--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^5.5.0",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^3.0.0",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "regex": "^0.1.1",
+    "xss-clean": "^0.1.1"
   },
   "repository": {
     "type": "git",
